[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="MainMenu" type="Control" groups=["Arena"]]
script = ExtResource( 1 )

[node name="MainMenuButtons" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LevelSelectButton" type="TextureButton" parent="MainMenuButtons"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 2 )

[node name="QuitButton" type="TextureButton" parent="MainMenuButtons"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
texture_normal = ExtResource( 2 )

[node name="LevelSelectionContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="BackButton" type="TextureButton" parent="LevelSelectionContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="LevelSelectionContainer"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 68.0

[connection signal="button_up" from="MainMenuButtons/LevelSelectButton" to="." method="_on_LevelSelectButton_button_up"]
[connection signal="button_up" from="MainMenuButtons/QuitButton" to="." method="_on_QuitButton_button_up"]
